Update macOS bundle configuration
- Change bundle name from 'Hummel' to 'BumbleBees'
- Update bundle identifier to 'com.mcschied.bumblebees'
- Maintain existing icon and resources configuration
- Bundle now creates BumbleBees.app instead of Hummel.app

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2021"
 crate-type = ["cdylib", "rlib"]
 
 [package.metadata.bundle]
-name = "Hummel"
-identifier = "com.mcschied.hummel"
-icon = ["assets/icon.icns"] 
+name = "BumbleBees"
+identifier = "com.mcschied.bumblebees"
+icon = ["assets/icon.icns"]
 resources = ["resources"]   
 
 [dependencies]
